--- a/css/main.css
+++ b/css/main.css
@@ -49,15 +49,16 @@ button {
 body {
   margin: 0;
   font-family: "Karla", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
-  max-width: 1126px;
+  max-width: 1130px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .header__block {
@@ -142,5 +143,361 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+}
+.hero {
+  background-image: url(../..//img/hero-bcg_mobile.png);
+  background-size: cover;
+  position: relative;
+}
+
+.hero__img {
+  margin-bottom: 93px;
+}
+
+.hero__content {
+  width: 327px;
+}
+
+.hero__title {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.hero__text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 32px;
+}
+
+.hero__btn {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 13px;
+  letter-spacing: 0.12em;
+  text-align: center;
+  color: #fff;
+  background-color: transparent;
+  padding: 13px 28px;
+  display: block;
+  margin: 0 auto;
+  border: 1.5px solid #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .hero__img {
+    -o-object-fit: contain;
+       object-fit: contain;
+    display: inline-block;
+    position: absolute;
+    left: 56%;
+    bottom: -62%;
+    width: 540px;
+    height: 650px;
+  }
+  .hero__content {
+    display: inline-block;
+    width: 540px;
+  }
+  .hero__content h1, .hero__content p {
+    text-align: left;
+  }
+  .hero__content button {
+    margin-left: 0;
+  }
+  .hero__btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 13px;
+    letter-spacing: 0.12em;
+    text-align: center;
+    color: #2c2830;
+    border: 1.5px solid #fff;
+    background: #fff;
+  }
+  .hero__block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 185px;
+    padding-bottom: 127px;
+  }
+}
+.about {
+  padding-top: 305px;
+  padding-bottom: 150px;
+}
+
+.about__title {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  text-align: center;
+  color: #2c2830;
+  white-space: nowrap;
+  margin-bottom: 96px;
+}
+
+.about__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 30px;
+}
+
+.about__item {
+  text-align: center;
+}
+.about__item img {
+  margin-bottom: 32px;
+}
+.about__item h3 {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 28px;
+  letter-spacing: -0.01em;
+  color: #2c2830;
+  margin-bottom: 16px;
+}
+.about__item p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  color: #837d88;
+}
+
+@media screen and (min-width: 768px) {
+  .about h2 {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 72px;
+    line-height: 89%;
+    text-align: left;
+    letter-spacing: -0.01em;
+    color: #2c2830;
+  }
+  .about__item {
+    text-align: left;
+  }
+}
+.find {
+  padding-bottom: 70px;
+  background-image: url(../../img/find_bcg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.find__content {
+  width: 279px;
+  display: block;
+  margin: 0 auto;
+  padding-top: 72px;
+}
+
+.find__title {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 40px;
+}
+
+.find__btn {
+  border: 1.5px solid #fff;
+  background-color: transparent;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 13px;
+  letter-spacing: 0.12em;
+  text-align: center;
+  color: #fff;
+  padding: 13px 25px;
+  display: block;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .find__content {
+    max-width: 949px;
+    width: 100%;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 70px 20px 0;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .find__title {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 56px;
+    line-height: 100%;
+    letter-spacing: -0.01em;
+    color: #fff;
+  }
+  .find__btn {
+    padding: 12px 24px;
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 13px;
+    letter-spacing: 0.12em;
+    text-align: center;
+    color: #2c2830;
+    border: 1.5px solid #fff;
+    background: #fff;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    white-space: nowrap;
+    text-align: center;
+    display: inline-block;
+  }
+}
+.footer {
+  padding-top: 150px;
+  background: #fafafa;
+}
+
+.footer__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.top__block {
+  margin-bottom: 20px;
+}
+
+.footer__top_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer-column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 200px;
+  margin: 10px;
+}
+
+.footer-column h3 {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 13px;
+  letter-spacing: 0.12em;
+  color: #837d88;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.footer-column ul li {
+  margin-bottom: 10px;
+}
+
+.footer-column ul li a {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 13px;
+  letter-spacing: 0.12em;
+  color: #2d2641;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.footer-column ul li a:hover {
+  color: #000;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__top {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 36px;
+  }
+  .top__block {
+    margin-bottom: 0;
+  }
+  .footer__top_list {
+    gap: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer-column {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .footer-column h3 {
+    font-size: 14px;
+  }
+  .footer-column ul li a {
+    font-size: 12px;
   }
 }/*# sourceMappingURL=main.css.map */
