--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -40,13 +40,14 @@ button {
 body {
   margin: 0;
   font-family: "Karla", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
-  max-width: 1126px;
+  max-width: 1130px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
