--- a/css/main.css
+++ b/css/main.css
@@ -237,7 +237,7 @@ body {
   }
 }
 .about {
-  padding-top: 305px;
+  padding-top: 140px;
   padding-bottom: 150px;
 }
 
@@ -290,6 +290,9 @@ body {
     text-align: left;
     letter-spacing: -0.01em;
     color: #2c2830;
+  }
+  .about {
+    padding-top: 305px;
   }
   .about__item {
     text-align: left;
