--- a/scss/block/_about.scss
+++ b/scss/block/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  padding-top: 305px;
+  padding-top: 140px;
   padding-bottom: 150px;
 }
 .about__title {
@@ -50,6 +50,9 @@
       letter-spacing: -0.01em;
       color: #2c2830;
     }
+  }
+  .about{
+    padding-top: 305px;
   }
   .about__item {
     text-align: left;
